# net

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
benches/: ha.rs  mc.rs
compat/: README.md  pyproject.toml
compat/tests/: test_status_ping.py
derive-packet/: Cargo.toml
derive-packet/src/: lib.rs
examples/: mc_status_compat_server.rs  mc_stream_parser.rs
src/: lib.rs
src/ha/: mod.rs
src/mc/: error.rs  io.rs  mod.rs  nbt.rs  packets.rs  state.rs  stream.rs  tests.rs  types.rs  varint.rs
src/mc/packets/: dispatch.rs  encryption_request.rs  handshake.rs  login_disconnect.rs  login_start.rs  mod.rs  set_compression.rs  status_ping.rs  status_pong.rs  status_request.rs  status_response.rs  transfer_config.rs
src/mc/packets/configuration/: acknowledge.rs  disconnect.rs  finish.rs  known_packs.rs  mod.rs  plugin_message.rs  registry_data.rs  update_tags.rs
src/mc/packets/data/: mod.rs  property.rs
src/mc/packets/handshaking/: handshake.rs  mod.rs
src/mc/packets/login/: acknowledged.rs  custom_query.rs  custom_query_answer.rs  disconnect.rs  encryption_request.rs  encryption_response.rs  game_profile.rs  mod.rs  set_compression.rs  start.rs  success.rs
src/mc/packets/play/: boss_bar.rs  chat_command.rs  chat_message.rs  commands.rs  disconnect.rs  game_event.rs  keep_alive.rs  legacy_chat_message.rs  legacy_set_title.rs  login.rs  mod.rs  player_abilities.rs  player_info_update.rs  plugin_message.rs  respawn.rs  set_action_bar_text.rs  set_chunk_cache_center.rs  set_default_spawn_position.rs  set_entity_data.rs  set_player_position.rs  set_player_position_and_rotation.rs  set_subtitle_text.rs  set_title_text.rs  set_titles_animation.rs  synchronize_player_position.rs  system_chat_message.rs  tab_list.rs  transfer.rs  update_time.rs
src/proto/: io.rs  mod.rs  packets.rs  state.rs  tests.rs  types.rs  varint.rs
src/sock/: ebpf.rs  ebpf_kern.c  epoll.c  epoll.h  epoll.rs  mod.rs  tokio.rs  uring.rs
(+5 files in other folders)
