[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
dashmap = "6.1"
libc = "0.2"
log = "0.4.22"
num_cpus = "1.16"
tokio = { version = "1.48", features = ["full", "rt-multi-thread", "tracing"] }
tokio-uring = { git = "https://github.com/hUwUtao/tokio-uring.git", version = "0.5.0", features = ["bytes"] }
io-uring = "0.7.11"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.8"

[features]
packet-debug = []

[[bench]]
name = "mc"
harness = false

[[bench]]
name = "ha"
harness = false
