[package]
name = "net"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
libc = "0.2"
log = "0.4.22"
tokio = { version = "1.48", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "tracing"] }
io-uring = { version = "0.7.11", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.8"

[features]
packet-debug = []
uring = ["dep:io-uring"]
ebpf = []

[[bench]]
name = "mc"
harness = false

[[bench]]
name = "ha"
harness = false
